--- a/subgraphDerivativeNFT/subgraph.yaml
+++ b/subgraphDerivativeNFT/subgraph.yaml
@@ -24,6 +24,7 @@ dataSources:
         - SlotChanged
         - BurnToken
         - BurnTokenWithSig
+        - DerivativeNFTImageURISet
       abis:
         - name: DerivativeNFTV1
           file: ./abis/DerivativeNFTV1.json
@@ -44,4 +45,6 @@ dataSources:
           handler: handleBurnToken
         - event: BurnTokenWithSig(uint256,uint256,address,uint256)
           handler: handleBurnTokenWithSig
+        - event: DerivativeNFTImageURISet(indexed uint256,string,uint256)
+          handler: handleDerivativeNFTImageURISet
       file: ./src/derivativeNFTV1-mapping.ts
