--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: SBT
     network: mainnet
     source:
-      address: "0x610178dA211FEF7D417bC0e6FeD39F05609AD788"
+      address: "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e"
       abi: Events
       startBlock: 0
     mapping:
@@ -43,7 +43,7 @@ dataSources:
     name: SBTERC3525
     network: mainnet
     source:
-      address: "0x610178dA211FEF7D417bC0e6FeD39F05609AD788"
+      address: "0xB7f8BC63BbcaD18155201308C8f3540b07f84F5e"
       abi: SBT
       startBlock: 0
     mapping:
@@ -79,7 +79,7 @@ dataSources:
     name: Manager
     network: mainnet
     source:
-      address: "0x0165878A594ca255338adfa4d48449f69242Eb8F"
+      address: "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
       abi: Events
       startBlock: 0
     mapping:
@@ -121,7 +121,7 @@ dataSources:
           handler: handleDerivativeNFTCollected
         - event: DerivativeNFTAirdroped(uint256,address,uint256,uint256,uint256[],uint256[],uint256[],uint256)
           handler: handleDerivativeNFTAirdroped
-        - event:  DispatcherSet(indexed uint256,indexed address,uint256)
+        - evefnt:  DispatcherSet(indexed uint256,indexed address,uint256)
           handler: handleDispatcherSet
         - event:  StateSet(indexed address,indexed uint8,indexed uint8,uint256)
           handler: handleStateSet
@@ -133,7 +133,7 @@ dataSources:
     name: BankTreasury
     network: mainnet
     source:
-      address: "0xA51c1fc2f0D1a1b8494Ed1FE312d7C3a78Ed91C0"
+      address: "0x0B306BF915C4d645ff596e518fAf3F9669b97016"
       abi: Events
       startBlock: 0
     mapping:
@@ -178,7 +178,7 @@ dataSources:
     name: Voucher
     network: mainnet
     source:
-      address: "0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6"
+      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
       abi: Events
       startBlock: 0
     mapping:
@@ -205,7 +205,7 @@ dataSources:
     name: VoucherERC1155
     network: mainnet
     source:
-      address: "0x2279B7A0a67DB372996a5FaB50D91eAA73d2eBe6"
+      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
       abi: Voucher
       startBlock: 0
     mapping:
@@ -229,7 +229,7 @@ dataSources:
     name: ModuleGlobals
     network: mainnet
     source:
-      address: "0x0B306BF915C4d645ff596e518fAf3F9669b97016"
+      address: "0x68B1D87F95878fE05B998F19b66F4baba5De1aed"
       abi: Events
       startBlock: 0
     mapping:
@@ -283,7 +283,7 @@ dataSources:
     name: FeeCollectModule
     network: mainnet
     source:
-      address: "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE"
+      address: "0xc6e7DF5E7b4f2A278906862b61205850344D4e7d"
       abi: Events
       startBlock: 0
     mapping:
@@ -304,7 +304,7 @@ dataSources:
     name: Receiver
     network: mainnet
     source:
-      address: "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512"
+      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
       abi: Events
       startBlock: 0
     mapping:
@@ -326,7 +326,7 @@ dataSources:
     name: MarketPlace
     network: mainnet
     source:
-      address: "0x9A676e781A523b5d0C0e43731313A708CB607508"
+      address: "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE"
       abi: Events
       startBlock: 0
     mapping:
