--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -96,6 +96,8 @@ dataSources:
         - StateSet
         - ValueChanged
       abis:
+        - name: Manager
+          file: ./abis/Manager.json      
         - name: Events
           file: ./abis/Events.json
       eventHandlers:
@@ -140,6 +142,7 @@ dataSources:
       language: wasm/assemblyscript
       entities:
         - Deposit
+        - DepositByFallback
         - ERC3525Received
         - ExchangeSBTByEth
         - ExchangeEthBySBT
@@ -155,6 +158,8 @@ dataSources:
       eventHandlers:
         - event: Deposit(indexed address,uint256,indexed address,uint256)
           handler: handleDeposit
+        - event: DepositByFallback(indexed address,uint256,indexed address,uint256,bytes)
+          handler: handleDepositByFallback
         - event: ERC3525Received(indexed address,indexed uint256,indexed uint256,uint256,bytes,uint256)
           handler: handleERC3525Received
         - event: ExchangeSBTByEth(indexed uint256,indexed address,indexed uint256,uint256)
