--- a/subgraph/package.json
+++ b/subgraph/package.json
@@ -1,16 +1,22 @@
 {
     "name": "MySubgraph",
     "license": "UNLICENSED",
+    
     "scripts": {
         "codegen": "graph codegen",
-        "build": "graph build",
+        "build": "graph build --networkFile ./networks.json --network mainnet",
+        "prepare:mainnet": "mustache config/mainnet.js subgraph.template.yaml > subgraph.yaml",
         "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ NoA/MySubgraph",
         "create-local": "graph create --node http://localhost:8020/ NoA/MySubgraph",
         "remove-local": "graph remove --node http://localhost:8020/ NoA/MySubgraph",
-        "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 NoA/MySubgraph"
+        "deploy-local":  "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 NoA/MySubgraph --networkFile ./networks.json --network mainnet"
     },
     "dependencies": {
         "@graphprotocol/graph-cli": "0.31.0",
         "@graphprotocol/graph-ts": "0.27.0"
+    },
+    "devDependencies": {
+        "@types/mustache": "^4.2.2",
+        "mustache": "^4.2.0"
     }
 }
