--- a/subgraphDerivativeNFT/subgraph.yaml
+++ b/subgraphDerivativeNFT/subgraph.yaml
@@ -8,9 +8,9 @@ dataSources:
     name: DerivativeNFTV1
     network: mainnet
     source:
-      address: "0x9bd03768a7DCc129555dE410FF8E85528A4F88b5"
       abi: DerivativeNFTV1
-      startBlock: 0
+      address: "0x9bd03768a7DCc129555dE410FF8E85528A4F88b5"
+      startBlock: 1
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.6
@@ -26,7 +26,7 @@ dataSources:
         - DerivativeNFTImageURISet
       abis:
         - name: DerivativeNFTV1
-          file: ./abis/DerivativeNFTV1.json
+          file: ../artifacts/contracts/DerivativeNFTV1.sol/DerivativeNFTV1.json
       eventHandlers:
         - event: Approval(indexed address,indexed address,indexed uint256)
           handler: handleApproval
