--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -9,7 +9,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82"
+      address: "0x8A93d247134d91e0de6f96547cB0204e5BE8e5D8"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -38,7 +38,7 @@ dataSources:
     network: mainnet
     source:
       abi: SBT
-      address: "0x0DCd1Bf9A1b36cE34237eEaFef220932846BCD82"
+      address: "0x8A93d247134d91e0de6f96547cB0204e5BE8e5D8"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -73,7 +73,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0xa513E6E4b8f2a923D98304ec87F64353C4D5C853"
+      address: "0x525C7063E7C20997BaaE9bDa922159152D0e8417"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -137,7 +137,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x9A9f2CCfdE556A7E9Ff0848998Aa4a0CFD8863AE"
+      address: "0x99dBE4AEa58E518C50a1c04aE9b48C9F6354612f"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -155,6 +155,9 @@ dataSources:
         - ExecuteTransactionERC3525
         - RevokeConfirmation
         - ExchangeVoucher
+        - BalanceLocked
+        - BalanceUnlocked
+        - OfferWithdrawn
       abis:
         - name: Events
           file: ../artifacts/contracts/libraries/Events.sol/Events.json
@@ -186,13 +189,21 @@ dataSources:
         - event: ExchangeVoucher(indexed uint256,indexed address,indexed
             uint256,uint256,uint256)
           handler: handleExchangeVoucher
+        - event: BalanceLocked(indexed address,indexed uint256,indexed
+            uint256,uint256,uint256)
+          handler: handleBalanceLocked
+        - event: BalanceUnlocked(indexed address,indexed uint256,indexed uint256,uint256)
+          handler: handleBalanceUnlocked
+        - event: OfferWithdrawn(indexed address,indexed uint256,address,indexed
+            uint256,uint256)
+          handler: handleOfferWithdrawn
       file: ./src/bankTreasury-mapping.ts
   - kind: ethereum/contract
     name: Voucher
     network: mainnet
     source:
       abi: Events
-      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
+      address: "0x5fc748f1FEb28d7b76fa1c6B07D8ba2d5535177c"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -218,7 +229,7 @@ dataSources:
     network: mainnet
     source:
       abi: Voucher
-      address: "0x8A791620dd6260079BF849Dc5567aDC3F2FdC318"
+      address: "0x5fc748f1FEb28d7b76fa1c6B07D8ba2d5535177c"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -243,7 +254,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0xc6e7DF5E7b4f2A278906862b61205850344D4e7d"
+      address: "0x5FeaeBfB4439F3516c74939A9D04e95AFE82C4ae"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -298,7 +309,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x4ed7c70F96B99c776995fB64377f0d4aB3B0e1C1"
+      address: "0x19cEcCd6942ad38562Ee10bAfd44776ceB67e923"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -310,7 +321,7 @@ dataSources:
         - name: Events
           file: ../artifacts/contracts/libraries/Events.sol/Events.json
       eventHandlers:
-        - event: FeesForCollect(uint256,uint256,(uint256,uint256,uint256,uint256),(uint256,uint256,uint256,uint256,uint256))
+        - event: FeesForCollect(uint256,uint256,uint256,(uint256,uint256,uint256,uint256,uint256),(uint256,uint256,uint256,uint256,uint256))
           handler: handleFeesForCollect
       file: ./src/feeCollectModule-mapping.ts
   - kind: ethereum/contract
@@ -318,7 +329,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x9fE46736679d2D9a65F0992F2272dE9f3c7fa6e0"
+      address: "0x3aAde2dCD2Df6a8cAc689EE797591b2913658659"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -339,7 +350,7 @@ dataSources:
     network: mainnet
     source:
       abi: Events
-      address: "0x3Aa5ebB10DC797CAC828524e59A333d0A371443c"
+      address: "0xB0f05d25e41FbC2b52013099ED9616f1206Ae21B"
       startBlock: 1
     mapping:
       kind: ethereum/events
@@ -363,8 +374,8 @@ dataSources:
         - BuyPriceInvalidated
         - BuyPriceAccepted
       abis:
-        - name: DerivativeNFTV1
-          file: ../artifacts/contracts/DerivativeNFTV1.sol/DerivativeNFTV1.json
+        - name: MarketPlace
+          file: ../artifacts/contracts/MarketPlace.sol/MarketPlace.json
         - name: Events
           file: ../artifacts/contracts/libraries/Events.sol/Events.json
       eventHandlers:
@@ -375,15 +386,16 @@ dataSources:
           handler: handleAddMarket
         - event: RemoveMarket(address)
           handler: handleRemoveMarket
-        - event: ReserveAuctionBidPlaced(indexed uint256,indexed address,uint256,uint256)
+        - event: ReserveAuctionBidPlaced(indexed uint256,indexed uint256,indexed
+            uint256,address,uint256,uint256)
           handler: handleReserveAuctionBidPlaced
         - event: ReserveAuctionCanceled(indexed uint256)
           handler: handleReserveAuctionCanceled
         - event: ReserveAuctionCreated(indexed address,indexed address,indexed
-            uint256,uint256,uint256,uint256,uint256)
+            uint256,uint256,uint256,uint256,uint256,uint256,uint256)
           handler: handleReserveAuctionCreated
         - event: ReserveAuctionFinalized(indexed uint256,indexed address,indexed
-            address,uint256,uint256,uint256)
+            address,(uint256,uint256,uint256,uint256,uint256))
           handler: handleReserveAuctionFinalized
         - event: ReserveAuctionInvalidated(indexed uint256)
           handler: handleReserveAuctionInvalidated
@@ -393,7 +405,7 @@ dataSources:
             address,uint256,uint256)
           handler: handleOfferMade
         - event: OfferAccepted(indexed address,indexed uint256,indexed
-            address,address,uint256,uint256,uint256)
+            address,address,(uint256,uint256,uint256,uint256,uint256))
           handler: handleOfferAccepted
         - event: OfferInvalidated(indexed address,indexed uint256)
           handler: handleOfferInvalidated
@@ -404,6 +416,6 @@ dataSources:
         - event: BuyPriceInvalidated(indexed address,indexed uint256)
           handler: handleBuyPriceInvalidated
         - event: BuyPriceAccepted(indexed address,indexed uint256,indexed
-            address,address,uint256,uint256,uint256)
+            uint256,address,address,(uint256,uint256,uint256,uint256,uint256),(uint256,uint256,uint256,uint256,uint256))
           handler: handleBuyPriceAccepted
       file: ./src/marketplace-mapping.ts
