--- a/subgraph/subgraph.yaml
+++ b/subgraph/subgraph.yaml
@@ -107,7 +107,7 @@ dataSources:
         - event: HubCreated(indexed uint256,indexed address,indexed
             uint256,string,string,string,uint256)
           handler: handleHubCreated
-        - event: HubUpdated(indexed address,string,string,string,uint256)
+        - event: HubUpdated(indexed uint256,indexed address,string,string,string,uint256)
           handler: handleHubUpdated
         - event: PublishPrepared((uint256,uint256,uint256,uint256,uint256,uint256,string,string,bool,string[],uint256[],address,bytes,address,bytes),uint256,uint256,uint256)
           handler: handlePublishPrepared
@@ -169,8 +169,7 @@ dataSources:
           handler: handleDeposit
         - event: DepositByFallback(indexed address,uint256,bytes,indexed address,uint256)
           handler: handleDepositByFallback
-        - event: ERC3525Received(indexed address,indexed uint256,indexed
-            uint256,uint256,bytes,uint256)
+        - event: ERC3525Received(indexed address,indexed address,indexed uint256,uint256,uint256,bytes,uint256)
           handler: handleERC3525Received
         - event: ExchangeSBTByEth(indexed uint256,indexed address,indexed uint256,uint256)
           handler: handleExchangeSBTByEth
@@ -393,8 +392,7 @@ dataSources:
         - name: Events
           file: ../artifacts/contracts/libraries/Events.sol/Events.json
       eventHandlers:
-        - event: MarketPlaceERC3525Received(indexed address,indexed uint256,indexed
-            uint256,uint256,bytes,uint256)
+        - event: MarketPlaceERC3525Received(indexed address,indexed address,indexed uint256,uint256,uint256,bytes,uint256)
           handler: handleMarketPlaceERC3525Received
         - event: AddMarket(address,uint8,uint8,uint16)
           handler: handleAddMarket
@@ -423,8 +421,7 @@ dataSources:
           handler: handleOfferAccepted
         - event: OfferInvalidated(indexed address,indexed uint256)
           handler: handleOfferInvalidated
-        - event: BuyPriceSet((uint256,address,address,uint256,uint256,uint256,uint256,uint32,uint128,uint128,uint128),indexed
-            address)
+        - event: BuyPriceSet((uint256,address,address,uint256,uint256,uint256,uint256,uint128,uint128,uint128))
           handler: handleBuyPriceSet
         - event: BuyPriceCanceled(indexed address,indexed uint256)
           handler: handleBuyPriceCanceled
